--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -2,11 +2,20 @@
 server.port=8082
 
 spring.datasource.url=jdbc:mysql://localhost:3306/critterDB?createDatabaseIfNotExist=true
+
+#spring.datasource.url=jdbc:h2:mem:testcritterdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+
 spring.datasource.username=root
 spring.datasource.password=123123
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
+
+
+
 
 # Data Source Setup
 # Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
